@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-06T08:10:51Z",
-  "count_outdated" : 2628,
-  "uniques_outdated" : 1000,
+  "timestamp" : "2023-08-07T00:54:38Z",
+  "count_outdated" : 2630,
+  "uniques_outdated" : 1001,
   "count" : 2700,
   "uniques" : 1043,
   "clones" : [
-    {
-      "timestamp": "2023-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-24T00:00:00Z",
       "count": 2,
