@@ -1,12 +1,7 @@
 {
-  "count": 71,
+  "count": 70,
   "uniques": 34,
   "clones": [
-    {
-      "timestamp": "2023-07-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-24T00:00:00Z",
       "count": 2,
