@@ -1,3 +1,12 @@
+2023-08-07T00:54:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5779764357 # 1796
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
+* notice: last 14d: unq all: 34 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 1000 2628 / 1043 2700
+* notice: next accum: outdated-unq outdated-all / unq all: 1001 2630 / 1043 2700
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-23] / []
+
 2023-08-06T08:10:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5775498010 # 1794
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-06
